syntax = "proto3";

option csharp_namespace = "ContosoLending.Grpc.Server";
package contosolending.grpc.server;

service ExchangeRateManager {
	rpc GetExchangeRate (ExchangeRateRequest) returns (ExchangeRateReply);
}

message ExchangeRateRequest {
	string currency_type_from = 1;
	string currency_type_to = 2;
}

message ExchangeRateReply {
	double exchange_rate = 1;
}
